[package]
name = "spotify-tui"
version = "0.1.0"
authors = ["Gustavo"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
dotenv = "0.15"
rspotify = { version = "0.13.0", features = ["cli"], cli = ["webbrowser"] }
librespot-connect = { version = "0.4.2", optional = true }
librespot-playback = { version = "0.4.2", optional = true }
librespot-core = "0.4.2"
actix-web = "4"
rand = "0.8"
cookie = "0.18.1"
serde_urlencoded = "0.7"
